<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_8sdp"
    android:layout_marginLeft="@dimen/_16sdp"
    android:layout_marginRight="@dimen/_16sdp"
    app:cardElevation="@dimen/_6sdp"
    app:cardCornerRadius="@dimen/_4sdp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/indicator"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:background="@drawable/pink_gradient" />
        <LinearLayout
            android:id="@+id/ll_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/rounded_bold"
                android:id="@+id/txt_fundname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="ICIC Prudentian Value discovery fund- Growth"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:fontFamily="@font/rounded_light"
                        android:textSize="@dimen/_9ssp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_sip_amount" />

                    <TextView
                        android:fontFamily="@font/rounded_light"
                        android:textSize="@dimen/_9ssp"
                        android:id="@+id/tx_min_sip_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:text="₹ 5000"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:fontFamily="@font/rounded_light"
                        android:textSize="@dimen/_9ssp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_sip_multiple" />

                    <TextView
                        android:fontFamily="@font/rounded_light"
                        android:textSize="@dimen/_9ssp"
                        android:id="@+id/tx_min_sip_multiple"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:text="₹ 5000"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@android:color/darker_gray" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"

                >
                <LinearLayout
                    android:id="@+id/ll_sip_date"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:fontFamily="@font/rounded_light"
                        android:textSize="@dimen/_9ssp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sip_dates" />

                    <TextView
                        android:fontFamily="@font/rounded_light"
                        android:textSize="@dimen/_9ssp"
                        android:id="@+id/tx_sip_dates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:text="5, 10, 15, 20"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:fontFamily="@font/rounded_light"
                        android:textSize="@dimen/_9ssp"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:layout_marginRight="@dimen/_2sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/of_every_month" />
                </LinearLayout>
                <TextView
                    android:padding="@dimen/_2sdp"
                    android:textSize="@dimen/_9sdp"
                    android:fontFamily="@font/rounded_bold"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/add"
                    android:textColor="@color/blue"
                    android:layout_gravity="end"
                    android:id="@+id/tx_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_fund"
                android:visibility="gone"
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:background="@color/light_grey"
                android:layout_height="@dimen/_36sdp">
                <EditText
                    android:id="@+id/edt_fund"
                    android:fontFamily="@font/rounded_light"
                    android:paddingLeft="@dimen/_6sdp"
                    android:textSize="@dimen/_10ssp"
                    android:hint="@string/enter_sip_amount"
                    android:gravity="center_vertical"
                    android:background="@color/light_grey"
                    android:layout_weight="7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tx_add_fund"
                    android:fontFamily="@font/rounded_bold"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:background="@drawable/gradient"
                    android:text="@string/add_fund"
                    android:textSize="@dimen/_10ssp"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>